<resources>
    <string name="app_name">SuitCaseApp</string>
    <string name="welcome_text">
        Welcome to SuitCase!

    </string>

    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="login_text">Login</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_hint">First Time? Register Here</string>
    <string name="register">REGISTER</string>
    <string name="login_hint">Already Have an Account?</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

</resources>